--- a/OasisFamiliarWebSite/Views/Receptionist/VerFactura.cshtml
+++ b/OasisFamiliarWebSite/Views/Receptionist/VerFactura.cshtml
@@ -8,34 +8,32 @@
 <h2 style="text-align:center;">Factura: @ViewBag.Data.idFactura</h2>
 <h3 style="text-align:center;">@ViewBag.Data.Fecha</h3>
 
-<div id="myModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">¿ Desea Pagar la cuenta ?</h4>
+
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+
+                <div style="col-md-4 mx-auto">
+                    <form method="post" action="@Url.Action("Pagar", "Receptionist")">
+
+                        <div class="modal-body">
+                            <h1>¿ Desea Pagar la cuenta ?</h1>
+                        </div>
+
+                        <div class="modal-footer">
+                            <input type="hidden" id="id_factura" name="id_factura" class="id_factura">
+                            <input type="submit" value="SI" class="btn btn-success" />
+                            <button type="button" class="btn btn-warning" data-dismiss="modal">NO</button>
+                        </div>
+                    </form>
+                </div>
+
             </div>
-
-            <div style="col-md-4 mx-auto">
-                <form method="post" action="@Url.Action("Factura", "Receptionist")">
-
-                    <h1>
-                        @* un pequeño espacio para que se vear ordenado *@
-                    </h1>
-
-                  
-
-                    <div class="modal-footer">
-                        <input type="submit" text-align="center" value="Si " class="btn btn-primary" />
-                        <input type="submit" text-align="center" value="No" class="btn btn-primary" />
-                    </div>
-
-                </form>
-            </div>
-            
         </div>
     </div>
-</div>
 
 <table class="table table-bordered border border-success ">
     <thead class="thead-dark">
@@ -60,7 +58,7 @@
                 <td id="loop">@item.total</td>
             </tr>
 
-            i+=1;
+            i += 1;
         }
         <tr>
             <td colspan="4" style="text-align:right; font-stretch:expanded; font-weight:bold">TOTAL:</td>
@@ -71,12 +69,11 @@
 </table>
 
 <div class="btn-group" contextmenu="center">
-    <button type="button" class="btn btn-success edit_button " data-toggle="modal" data-target="#myModal" data-id="Html.DisplayFor(modelItem => item.idMesa)">Pagar</button>
+    <button type="button" class="btn btn-success pay_button" data-toggle="modal" data-target="#myModal" data-id=" @ViewBag.Data.idFactura">Pagar</button>
     <button type="button" class="btn btn-danger " data-target="cancelado">Cancelar Factura</button>
-    <button type="button" class="btn btn-warning" data-target="all">Pago Pendiente</button>
 </div>
 
-
+            
 
 
 <script>
@@ -94,7 +91,7 @@
 
     });
 
-    
+
 </script>
 
 
@@ -102,17 +99,10 @@
 
 <script>
 
-    $(document).on("click", '.edit_button', function (e) {
+    $(document).on("click", '.pay_button', function (e) {
         var id = $(this).data('id');
-        var fac = $(this).data('factura');
-
         console.log(id);
-        $(".edit_id").val(id);
-        console.log(fac);
-        $(".factura_id").val(fac);
-
-
-        $(".modal-title").val("Crear Factura para Mesa" + id);
+        $(".id_factura").val(id);
     });
 
 
