--- a/OasisFamiliarWebSite/Views/Receptionist/Historial.cshtml
+++ b/OasisFamiliarWebSite/Views/Receptionist/Historial.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model IEnumerable<OasisFamiliarWebSite.Models.FacturasPendientesVM>
+
+@{
     ViewBag.Title = "Historial";
     Layout = "~/Views/Shared/_LayoutReceptionist.cshtml";
 }
@@ -7,72 +9,63 @@
 
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
-   
-   
-        <div class="container">
-            <div class="row">
 
-                <section class="content">
-                    <div class="col-md-8 col-md-offset-2">
-                        <div class="panel panel-default">
-                            <div class="panel-body">
 
-                                <div class="pull-right">
-                                    <div class="btn-group" contextmenu="center">
-                                        <button type="button" class="btn btn-success btn-filter" data-target="pagado">Pagado</button>
-                                        <button type="button" class="btn btn-danger btn-filter" data-target="cancelado">Cancelado</button>
-                                        <button type="button" class="btn btn-default btn-filter" data-target="all">Todos</button>
-                                    </div>
-                                </div>
+<table class="table table-bordered border border-success ">
+    .
+    <thead class="thead-dark">
+        <tr>
 
-                                <div class="table-container">
-                                    <table class="table table-filter">
-                                        <tbody>
-                                            <tr data-status="pagado">
-                                                
-                                            
-                                                <th scope="col">Mesa</th>
-                                                <th scope="col">Factura</th>
-                                                <th scope="col">Total</th>
-                                                <th scope="col">Usuario</th>
-                                            
-                                            </tr>
+            <th scope="col">Mesa</th>
+            <th scope="col">Factura</th>
 
-                                            <tr data-status="cancelado">
-                                                <th scope="col">Mesa</th>
-                                                <th scope="col">Factura</th>
-                                                <th scope="col">Total</th>
-                                                <th scope="col">Usuario</th>
+            <th scope="col">Usuario</th>
+            <th scope="col">Total</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
 
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
 
-                            </div>
-                        </div>
-                    </div>
-                </section>
 
-            </div>
-        </div>
-   
-<script>
-    $(document).ready(function () {
-        $('.star').on('click', function () {
-            $(this).toggleClass('star-checked');
-        });
-        $('.ckbox label').on('click', function () {
-            $(this).parents('tr').toggleClass('selected');
-        });
-        $('.btn-filter').on('click', function () {
-            var $target = $(this).data('target');
-            if ($target != 'all') {
-                $('.table tr').css('display', 'none');
-                $('.table tr[data-status="' + $target + '"]').fadeIn('slow');
-            } else {
-                $('.table tr').css('display', 'none').fadeIn('slow');
+  
+
+                <tr>
+                    <td>@Html.DisplayFor(modelItem => item.idMesa)</td>
+                    <td>@Html.DisplayFor(modelItem => item.idFactura)</td>
+
+                    <td>@Html.DisplayFor(modelItem => item.usuario)</td>
+                    <td>@Html.DisplayFor(modelItem => item.total)</td>
+                </tr>
+
+
+
+
+
+
+
             }
-        });
+    </tbody>
+
+</table>
+
+<!--Codigo para tomar valor de la tabla-->
+
+<script>
+
+    $(document).on("click", '.edit_button', function (e) {
+        var id = $(this).data('id');
+        var fac = $(this).data('factura');
+
+        console.log(id);
+        $(".edit_id").val(id);
+        console.log(fac);
+        $(".factura_id").val(fac);
+
+
+        $(".modal-title").val("Crear Factura para Mesa" + id);
     });
+
+
 </script>
