--- a/OasisFamiliarWebSite/Views/Customer/Index.cshtml
+++ b/OasisFamiliarWebSite/Views/Customer/Index.cshtml
@@ -35,7 +35,7 @@
             {
                 <button type="button" class="btn btn-primary btn-outline" onclick="location.href='@Url.Action("VerFactura", "Customer", new { item = ViewBag.Data.FacturaActual })'"> Revisar facturar</button>
                 <button type="button" class="btn btn-primary btn-outline" onclick="location.href='@Url.Action("MenuPage", "Customer", new { item = ViewBag.Data.FacturaActual })'">Ordenar</button>
-                <button type="button" class="btn btn-danger btn-outline">Pagar</button>
+                <!--<button type="button" class="btn btn-danger btn-outline">Pagar</button>-->
             }
             else
             {
@@ -44,5 +44,5 @@
         }
         <button type="button" class="btn btn-primary btn-outline">Llamar la mesero</button>
     </div>
-</div>
+            </div>
 
