--- a/OasisFamiliarWebSite/Views/Customer/VerFactura.cshtml
+++ b/OasisFamiliarWebSite/Views/Customer/VerFactura.cshtml
@@ -46,7 +46,7 @@
     <div class="btn-group-vertical center">
         <button type="button" class="btn btn-primary btn-outline" onclick="location.href='@Url.Action("MenuPage", "Customer", new { item = ViewBag.Data.idFactura})'">Ordenar más</button>
         <button type="button" class="btn btn-danger btn-outline">Llamar al Mesero</button>
-        <button type="button" class="btn btn-primary btn-outline">Pagar cuenta</button>
+        <!-- <button type="button" class="btn btn-primary btn-outline">Pagar cuenta</button>-->
     </div>
 </div>
 
